--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,6 @@
 = testing docker hub autotesting repo.
 
 image:https://img.shields.io/docker/cloud/automated/kimcharli/test-docker-autobuild.svg[Docker Cloud Automated build]
+image:https://img.shields.io/docker/cloud/build/kimcharli/test-docker-autobuild.svg[Docker Cloud Build Status]
 
 
